--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,34 @@
-<label for="house_select">Select House:</label>
-<select name="house_id" id="house_select">
-  <option value="1">Gryffindor</option>
-  <option value="2">Hufflepuff</option>
-  <option value="3">Ravenclaw</option>
-  <option value="4">Slytherin</option>
-</select>
+<p>New Student Form</p>
+
+<form class="" action="/student_list" method="post">
+  <label for="first-name">First Name:</label>
+    <input id = "first-name" type="text" name="first_name" />
+  </br>
+
+  <label for ="last-name">Last Name:</label>
+    <input id="last-name" type="text" name="last_name">
+  </br>
+
+  <label for ="age">Age:</label>
+    <select id="age-select" name="age">
+      <option value="Choose an option">Choose an Option</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+      <option value="13">13</option>
+      <option value="14">14</option>
+      <option value="15">15</option>
+      <option value="16">16</option>
+      <option value="17">17</option>
+    </select>
+  </br>
+
+  <label for="house_select">Select House:</label>
+  <select name="house_id" id="house_select">
+    <option value="1">Gryffindor</option>
+    <option value="2">Hufflepuff</option>
+    <option value="3">Ravenclaw</option>
+    <option value="4">Slytherin</option>
+  </select>
+  </br>
+  <input type='submit' value="Submit Student"/>
+</form>
