Edit function works , not houses yet

--- a/views/create.erb
+++ b/views/create.erb
@@ -1,2 +1,3 @@
 <p>You have successfully enrolled <%= @new_student.pretty_name %>,
   he has been sorted into <%= @new_student.house.name %> house</p>
+<a href="/student_list">Go Home</a>
