--- a/views/show.erb
+++ b/views/show.erb
@@ -10,3 +10,4 @@
 <form class="" action="/student_list/<%- @student.id %>/delete" method="post"
   <input type="submit" value="DELETE"
 </form>
+<a href="/student_list">Go Home</a>
