--- a/views/new.erb
+++ b/views/new.erb
@@ -11,14 +11,14 @@
 
   <label for ="age">Age:</label>
     <select id="age-select" name="age">
-      <option value="Choose an option">Choose an Option</option>
+      <option value="Choose an option">Choose Age:</option>
       <option value="11">11</option>
       <option value="12">12</option>
       <option value="13">13</option>
       <option value="14">14</option>
       <option value="15">15</option>
       <option value="16">16</option>
-      <option value="17">17</option>
+      <option value="37">37</option>
     </select>
   </br>
 
